--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
               <div class="col-md-10 col-md-offset-1">
                 <h1 class="brand-heading">Carbon Zerow</h1>
                 <p class="intro-text">One boat.  Four rowers.
-Carbon neutral Atlantic crossing.
-Donate in £'s
-Join us on this journey and support our campaign by making a donation in £'s or $'s. Donate over $/£100 and get your name/logo/quote on the boat! The larger the donation the more space you get!</p>
+Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow arrived at English Harbour in Antigua after safely rowing across the Atlantic in 45 days while remaining friends to the end!</p>
 
 
                 <!-- <div class="container brands logos">
