--- a/index.html
+++ b/index.html
@@ -163,19 +163,53 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="more-logos">
-                <h1>Sponsors</h1>
+                <h1>Partners</h1>
+                <p>Our campaign was made possible with the help of these organisations</p>
                 <div class="row">
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.rei.com/"><img src="img/logos/rei.png" alt="REI" /></a>
+                    <a href="http://www.carbontrust.com/"><img src="img/logos/carbontrust.png" alt="Carbon Trust" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.sierraclub.org/"><img src="img/logos/sierra.png" alt="Sierra Club" /></a>
+                    <a href="http://www.nokia.com/"><img src="img/logos/nokia.png" alt="Nokia" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://hipcamp.com/"><img src="img/logos/hipcamp.png" alt="Hipcamp" /></a>
+                    <a href="http://www.scitecnutrition.com/"><img src="img/logos/scitec.png" alt="Scitec" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.alitedesigns.com"><img src="img/logos/alite.png" alt="Alite Designs" /></a>
+                    <a href="http://www.oceansignal.com"><img src="img/logos/ocean_signal.png" alt="Ocean Signal" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.crewsaver.com"><img src="img/logos/crewsaver.png" alt="Crewsaver" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.energymutual.com"><img src="img/logos/energymutual.png" alt="Energy Mutual" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.bambooclothing.com"><img src="img/logos/BAM.png" alt="BAM" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.ogilvieross.co.uk"><img src="img/logos/ogilivie.png" alt="Ogilvie Ross" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.rangeglobal.com"><img src="img/logos/rangeglobal.png" alt="Range Global" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.sailfishmarine.co.uk"><img src="img/logos/sailfish.png" alt="Sailfish" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.mintcake.co.uk"><img src="img/logos/romneys.png" alt="Romneys" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.thecrewstop.com"><img src="img/logos/crewstop.png" alt="Crew Stop" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="img/logos/johnstons.png" alt="Johnstons" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="https://www.suffolkmarinesafety.com"><img src="img/logos/suffolk.png" alt="Suffolk Marine Safety" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
+                    <a href="http://www.barden-uk.com"><img src="img/logos/barden.png" alt="Barden" /></a>
                   </div>
                 </div>
               </div>
