--- a/index.html
+++ b/index.html
@@ -170,16 +170,16 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
                     <a href="http://www.carbontrust.com/"><img src="img/logos/carbontrust.png" alt="Carbon Trust" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.nokia.com/"><img src="img/logos/nokia.png" alt="Nokia" /></a>
+                    <a href="http://www.nokia.com/"><img src="img/logos/nokia.jpg" alt="Nokia" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.scitecnutrition.com/"><img src="img/logos/scitec.png" alt="Scitec" /></a>
+                    <a href="http://www.scitecnutrition.com/"><img src="img/logos/scitec.jpg" alt="Scitec" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.oceansignal.com"><img src="img/logos/ocean_signal.png" alt="Ocean Signal" /></a>
+                    <a href="http://www.oceansignal.com"><img src="img/logos/oceansignal.jpg" alt="Ocean Signal" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.crewsaver.com"><img src="img/logos/crewsaver.png" alt="Crewsaver" /></a>
+                    <a href="http://www.crewsaver.com"><img src="img/logos/crew_saver.jpeg" alt="Crewsaver" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
                     <a href="http://www.energymutual.com"><img src="img/logos/energymutual.png" alt="Energy Mutual" /></a>
@@ -188,7 +188,7 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
                     <a href="http://www.bambooclothing.com"><img src="img/logos/BAM.png" alt="BAM" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.ogilvieross.co.uk"><img src="img/logos/ogilivie.png" alt="Ogilvie Ross" /></a>
+                    <a href="http://www.ogilvieross.co.uk"><img src="img/logos/ogilvie.jpg" alt="Ogilvie Ross" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
                     <a href="http://www.rangeglobal.com"><img src="img/logos/rangeglobal.png" alt="Range Global" /></a>
@@ -197,19 +197,19 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
                     <a href="http://www.sailfishmarine.co.uk"><img src="img/logos/sailfish.png" alt="Sailfish" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.mintcake.co.uk"><img src="img/logos/romneys.png" alt="Romneys" /></a>
+                    <a href="http://www.mintcake.co.uk"><img src="img/logos/romney.jpg" alt="Romneys" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.thecrewstop.com"><img src="img/logos/crewstop.png" alt="Crew Stop" /></a>
+                    <a href="http://www.thecrewstop.com"><img src="img/logos/crewstop_logo.png" alt="Crew Stop" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="img/logos/johnstons.png" alt="Johnstons" /></a>
+                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="img/logos/johnstons.jpeg" alt="Johnstons" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
                     <a href="https://www.suffolkmarinesafety.com"><img src="img/logos/suffolk.png" alt="Suffolk Marine Safety" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.barden-uk.com"><img src="img/logos/barden.png" alt="Barden" /></a>
+                    <a href="http://www.barden-uk.com"><img src="img/logos/barden.jpg" alt="Barden" /></a>
                   </div>
                 </div>
               </div>
