--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <!-- TODO <link rel="icon" type="image/png" href="http://carbonzerow.org/img/favicon.png" /> -->
 
   <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
   <!-- Fonts -->
-  <link href="css/iconfont.css" rel="stylesheet" type="text/css">
-  <link href='fonts/fonts.css' rel='stylesheet' type='text/css'>
+  <link href="assets/css/iconfont.css" rel="stylesheet" type="text/css">
+  <link href='assets/fonts/fonts.css' rel='stylesheet' type='text/css'>
 
   <!-- Custom Theme CSS -->
-  <link href="css/grayscale.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 
   <!-- OG tags -->
   <meta property="og:title" content="Carbon Zerow"/>
@@ -48,7 +48,7 @@
               <i class="icon-bars"></i>
             </button>
             <a class="navbar-brand" href="#page-top">
-              <img src="http://carbonzerow.org/img/parks-trans.png" /> <span class="light">Carbon</span> Zerow
+              <img src="assets/img/carbonzerow-transparent.png" />
             </a>
           </div>
 
@@ -69,6 +69,8 @@
         <!-- /.container -->
       </nav>
 
+
+
       <section class="intro">
         <div class="intro-body">
           <div class="container">
@@ -76,7 +78,7 @@
               <div class="col-md-10 col-md-offset-1">
                 <h1 class="brand-heading">Carbon Zerow</h1>
                 <p class="intro-text">One boat.  Four rowers.
-Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow arrived at English Harbour in Antigua after safely rowing across the Atlantic in 45 days while remaining friends to the end! This is our story and a record of our crossing.</p>
+      Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow arrived at English Harbour in Antigua after safely rowing across the Atlantic in 45 days while remaining friends to the end! This is our story and a record of our crossing.</p>
 
 
                 <!-- <div class="container brands logos">
@@ -104,12 +106,10 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
+      </section>
 
 
-    <!-- <section id="email" class="content-section text-center">
+      <!-- <section id="email" class="content-section text-center">
       <div class="container download-section">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2">
@@ -156,7 +156,7 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
           <p>Send official public comments to: <a href="mailto:jasonmking@fs.fed.us?subject=Official Comment on R1S Draft" onClick="ga('send', 'event', 'Email', 'Desktop', 'Opened email');" >jasonmking@fs.fed.us</a></p>
         </div>
       </div>
-    </section> -->
+      </section> -->
 
       <section class="more-logos">
         <div class="container">
@@ -218,7 +218,7 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
         </div>
       </section>
 
-<section id="press" class="content-section text-center">
+      <section id="press" class="content-section text-center">
       <div class="container section">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
@@ -265,7 +265,7 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
           </div>
         </div>
       </div>
-    </section>
+      </section>
 
       <section id="footer" class="container content-section text-center">
         <div class="row">
@@ -288,8 +288,7 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
           <!-- <p class="footer-text">This site was created and run by Carbon Zerow, and operates under the AccessLand <a href="privacy.html">privacy policy</a></p> -->
         </div>
       </div>
-    </section>
-
+      </section>
 
     <!-- TODO Decide if we want these <div class="floating-share" style="">
       <div class="share-buttons">
@@ -307,12 +306,12 @@ Carbon neutral Atlantic crossing. On the 28th of January 2018 Team Carbon Zerow 
    </div> -->
 
    <!-- Core JavaScript Files -->
-   <script src="js/jquery-1.10.2.min.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-   <script src="js/jquery.easing.min.js"></script>
+   <script src="assets/js/jquery-1.10.2.min.js"></script>
+   <script src="assets/js/bootstrap.min.js"></script>
+   <script src="assets/js/jquery.easing.min.js"></script>
 
    <!-- Custom Theme JavaScript -->
-   <script src="js/grayscale.min.js"></script>
+   <script src="assets/js/custom.min.js"></script>
 
    <!-- Google Analytics -->
    <script>
