fix: add sponsor logos
Closes #6

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
                 <!-- <div class="container brands logos">
                   <div class="row">
                     <div class="col-md-3 col-sm-4">
-                      <a href="http://rei.com" target="_blank"><img src="img/logos/w-rei-250.png" alt="REI" /></a>
+                      <a href="http://rei.com" target="_blank"><img src="assets/img/sponsors/w-rei-250.png" alt="REI" /></a>
                     </div>
                     <div class="col-md-3 col-sm-4">
-                      <a href="http://www.sierraclub.org/" target="_blank"><img src="img/logos/w-sierra-250.png" alt="Sierra Club" /></a>
+                      <a href="http://www.sierraclub.org/" target="_blank"><img src="assets/img/sponsors/w-sierra-250.png" alt="Sierra Club" /></a>
                     </div>
                     <div class="col-md-3 col-sm-4">
-                      <a href="http://hipcamp.com/" target="_blank"><img src="img/logos/w-hipcamp-250.png" alt="Hipcamp" /></a>
+                      <a href="http://hipcamp.com/" target="_blank"><img src="assets/img/sponsors/w-hipcamp-250.png" alt="Hipcamp" /></a>
                     </div>
                     <div class="col-md-3 col-sm-4">
-                      <a href="http://www.codeforamerica.org" target="_blank"><img src="img/logos/w-codeforam-250.png" alt="Code for America" /></a>
+                      <a href="http://www.codeforamerica.org" target="_blank"><img src="assets/img/sponsors/w-codeforam-250.png" alt="Code for America" /></a>
                     </div>
                     </div>
                   </div> -->
@@ -167,49 +167,49 @@
                 <h2>Our campaign was made possible with the help of these organisations</h2>
                 <div class="row">
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.carbontrust.com/"><img src="img/logos/carbontrust.png" alt="Carbon Trust" /></a>
+                    <a href="http://www.carbontrust.com/"><img src="assets/img/sponsors/carbontrust.png" alt="Carbon Trust" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.nokia.com/"><img src="img/logos/nokia.jpg" alt="Nokia" /></a>
+                    <a href="http://www.nokia.com/"><img src="assets/img/sponsors/nokia.jpg" alt="Nokia" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.scitecnutrition.com/"><img src="img/logos/scitec.jpg" alt="Scitec" /></a>
+                    <a href="http://www.scitecnutrition.com/"><img src="assets/img/sponsors/scitec.jpg" alt="Scitec" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.oceansignal.com"><img src="img/logos/oceansignal.jpg" alt="Ocean Signal" /></a>
+                    <a href="http://www.oceansignal.com"><img src="assets/img/sponsors/oceansignal.jpg" alt="Ocean Signal" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.crewsaver.com"><img src="img/logos/crew_saver.jpeg" alt="Crewsaver" /></a>
+                    <a href="http://www.crewsaver.com"><img src="assets/img/sponsors/crew_saver.jpg" alt="Crewsaver" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.energymutual.com"><img src="img/logos/energymutual.png" alt="Energy Mutual" /></a>
+                    <a href="http://www.energymutual.com"><img src="assets/img/sponsors/energymutual.png" alt="Energy Mutual" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.bambooclothing.com"><img src="img/logos/BAM.png" alt="BAM" /></a>
+                    <a href="http://www.bambooclothing.com"><img src="assets/img/sponsors/BAM.png" alt="BAM" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.ogilvieross.co.uk"><img src="img/logos/ogilvie.jpg" alt="Ogilvie Ross" /></a>
+                    <a href="http://www.ogilvieross.co.uk"><img src="assets/img/sponsors/ogilvie.jpg" alt="Ogilvie Ross" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.rangeglobal.com"><img src="img/logos/rangeglobal.png" alt="Range Global" /></a>
+                    <a href="http://www.rangeglobal.com"><img src="assets/img/sponsors/rangeglobal.png" alt="Range Global" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.sailfishmarine.co.uk"><img src="img/logos/sailfish.png" alt="Sailfish" /></a>
+                    <a href="http://www.sailfishmarine.co.uk"><img src="assets/img/sponsors/sailfish.png" alt="Sailfish" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.mintcake.co.uk"><img src="img/logos/romney.jpg" alt="Romneys" /></a>
+                    <a href="http://www.mintcake.co.uk"><img src="assets/img/sponsors/romney.jpg" alt="Romneys" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.thecrewstop.com"><img src="img/logos/crewstop_logo.png" alt="Crew Stop" /></a>
+                    <a href="http://www.thecrewstop.com"><img src="assets/img/sponsors/crewstop_logo.png" alt="Crew Stop" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="img/logos/johnstons.jpeg" alt="Johnstons" /></a>
+                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="assets/img/sponsors/johnstons.jpg" alt="Johnstons" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="https://www.suffolkmarinesafety.com"><img src="img/logos/suffolk.png" alt="Suffolk Marine Safety" /></a>
+                    <a href="https://www.suffolkmarinesafety.com"><img src="assets/img/sponsors/suffolk.png" alt="Suffolk Marine Safety" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.barden-uk.com"><img src="img/logos/barden.jpg" alt="Barden" /></a>
+                    <a href="http://www.barden-uk.com"><img src="assets/img/sponsors/barden.jpg" alt="Barden" /></a>
                   </div>
                 </div>
               </div>
