feat: add favicon
Closes #1

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="description" content="The first carbon neutral trans-Atlantic row.">
 
   <title>Carbon Zerow</title>
+  <link rel="shortcut icon" href="assets/img/favicon.png">
 
   <!-- Favicon -->
   <!-- TODO <link rel="icon" type="image/png" href="http://carbonzerow.org/img/favicon.png" /> -->
