--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                     </div>
                     </div>
                   </div> -->
-                  <div class="page-scroll">
+                  <!-- <div class="page-scroll">
                   <a href="#email" class="btn btn-circle">
                     <i class="icon-angle-double-down animated"></i>
                   </a>
-                </div>
+                </div> -->
                 </div>
               </div>
             </div>
