work on logos a bit

--- a/index.html
+++ b/index.html
@@ -168,49 +168,49 @@
                 <h2>Our campaign was made possible with the help of these organisations</h2>
                 <div class="row">
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.carbontrust.com/"><img src="assets/img/sponsors/carbontrust.png" alt="Carbon Trust" /></a>
+                    <a href="http://www.carbontrust.com/"><img src="assets/img/sponsors/carbontrust.png" class="center-block img-responsive" alt="Carbon Trust" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.nokia.com/"><img src="assets/img/sponsors/nokia.jpg" alt="Nokia" /></a>
+                    <a href="http://www.nokia.com/"><img src="assets/img/sponsors/nokia.jpg" class="center-block" alt="Nokia" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.scitecnutrition.com/"><img src="assets/img/sponsors/scitec.jpg" alt="Scitec" /></a>
+                    <a href="http://www.scitecnutrition.com/"><img src="assets/img/sponsors/scitec.jpg" class="center-block" alt="Scitec" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.oceansignal.com"><img src="assets/img/sponsors/oceansignal.jpg" alt="Ocean Signal" /></a>
+                    <a href="http://www.oceansignal.com"><img src="assets/img/sponsors/oceansignal.jpg" class="center-block" alt="Ocean Signal" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.crewsaver.com"><img src="assets/img/sponsors/crew_saver.jpg" alt="Crewsaver" /></a>
+                    <a href="http://www.crewsaver.com"><img src="assets/img/sponsors/crew_saver.jpg" class="center-block" alt="Crewsaver" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.energymutual.com"><img src="assets/img/sponsors/energymutual.png" alt="Energy Mutual" /></a>
+                    <a href="http://www.energymutual.com"><img src="assets/img/sponsors/energymutual.png" class="center-block" alt="Energy Mutual" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.bambooclothing.com"><img src="assets/img/sponsors/BAM.png" alt="BAM" /></a>
+                    <a href="http://www.bambooclothing.com"><img src="assets/img/sponsors/BAM.png" class="center-block" alt="BAM" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.ogilvieross.co.uk"><img src="assets/img/sponsors/ogilvie.jpg" alt="Ogilvie Ross" /></a>
+                    <a href="http://www.ogilvieross.co.uk"><img src="assets/img/sponsors/ogilvie.jpg" class="center-block" alt="Ogilvie Ross" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.rangeglobal.com"><img src="assets/img/sponsors/rangeglobal.png" alt="Range Global" /></a>
+                    <a href="http://www.mintcake.co.uk"><img src="assets/img/sponsors/romney.jpg" class="center-block" alt="Romneys" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.sailfishmarine.co.uk"><img src="assets/img/sponsors/sailfish.png" alt="Sailfish" /></a>
+                    <a href="https://www.suffolkmarinesafety.com"><img src="assets/img/sponsors/suffolk.png" class="center-block" alt="Suffolk Marine Safety" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.mintcake.co.uk"><img src="assets/img/sponsors/romney.jpg" alt="Romneys" /></a>
+                    <a href="http://www.barden-uk.com"><img src="assets/img/sponsors/barden.jpg" class="center-block" alt="Barden" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.thecrewstop.com"><img src="assets/img/sponsors/crewstop_logo.png" alt="Crew Stop" /></a>
+                    <a href="http://www.sailfishmarine.co.uk"><img src="assets/img/sponsors/sailfish.png" class="center-block" alt="Sailfish" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="assets/img/sponsors/johnstons.jpg" alt="Johnstons" /></a>
+                    <a href="https://www.johnstonsofelgin.com/retail/"><img src="assets/img/sponsors/johnstons.jpg" class="center-block" alt="Johnstons" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="https://www.suffolkmarinesafety.com"><img src="assets/img/sponsors/suffolk.png" alt="Suffolk Marine Safety" /></a>
+                    <a href="http://www.rangeglobal.com"><img src="assets/img/sponsors/rangeglobal.png" class="center-block" alt="Range Global" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
-                    <a href="http://www.barden-uk.com"><img src="assets/img/sponsors/barden.jpg" alt="Barden" /></a>
+                    <a href="http://www.thecrewstop.com"><img src="assets/img/sponsors/crewstop_logo.png" class="center-block" alt="Crew Stop" /></a>
                   </div>
                 </div>
               </div>
