--- a/index.html
+++ b/index.html
@@ -274,8 +274,10 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
 
-            <h1>Want to stay in the loop?</h1>
-            <form action="//hipcamp.us7.list-manage.com/subscribe/post?u=3a6190b14724463178b254790&amp;id=1664a8e13b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <h1>Get in touch</h1>
+
+            <p><a href="mailto:carbonzerow@gmail.com">Send us an email!</a></p>
+            <!-- <form action="//hipcamp.us7.list-manage.com/subscribe/post?u=3a6190b14724463178b254790&amp;id=1664a8e13b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
               <div class="form-group">
                   <p>Receive updates from <span class="org-name">carbonzerow.org</span></p>
               </div>
