--- a/index.html
+++ b/index.html
@@ -288,10 +288,14 @@
               <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="form-control btn btn-default">
             </fieldset>
             <span id="error-text"></span>
-          </form>
+          </form> -->
 
           <!-- <p class="footer-text">This site was created and run by Carbon Zerow, and operates under the AccessLand <a href="privacy.html">privacy policy</a></p> -->
         </div>
+        <div class="col-md-12 copyright">
+          <p>
+            All content © 2018 Carbon Zerow
+          </p>
       </div>
       </section>
 
