feat: add social media
Closes #10

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta name="twitter:description" content="The first carbon neutral trans-Atlantic row.">
   <!-- TODO <meta name="twitter:image" content="http://carbonzerow.org/img/og-image.png">
   <meta name="twitter:url" content="http://carbonzerow.org"> -->
-</head>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.9/css/all.css" integrity="sha384-5SOiIsAziJl6AWe0HWRKTXlfcSHKmYV4RBF18PPJ173Kzn7jzMyFuTtk8JA7QQG1" crossorigin="anonymous"></head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
       <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
@@ -291,6 +291,19 @@
           </form> -->
 
           <!-- <p class="footer-text">This site was created and run by Carbon Zerow, and operates under the AccessLand <a href="privacy.html">privacy policy</a></p> -->
+
+          <p class="social">
+            Archives:<br />
+             <a href="https://twitter.com/carbonzerow" target="_blank">
+               <i class="fab fa-twitter"> </i>
+             </a>
+             <a href="https://instagram.com/carbonzerow" target="_blank">
+               <i class="fab fa-instagram"> </i>
+            </a>
+             <a href="https://facebook.com/carbonzerow" target="_blank">
+               <i class="fab fa-facebook"> </i>
+            </a>
+           </p>
         </div>
         <div class="col-md-12 copyright">
           <p>
