--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
                     <a href="http://www.sailfishmarine.co.uk"><img src="assets/img/sponsors/sailfish.png" class="center-block" alt="Sailfish" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
+                    <a href="http://www.zvanbenthem.com"><img src="assets/img/sponsors/zvanbenthem.jpg" class="center-block" alt="ZVanBenthem" /></a>
+                  </div>
+                  <div class="col-md-3 col-sm-4">
                     <a href="https://www.johnstonsofelgin.com/retail/"><img src="assets/img/sponsors/johnstons.jpg" class="center-block" alt="Johnstons" /></a>
                   </div>
                   <div class="col-md-3 col-sm-4">
