--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
         <div class="container">
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
+
+              <div style="text-align:center;">
+                <iframe width="840" height="473" src="https://www.youtube.com/embed/z1TrgU2z02U" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              </div>
+
               <div class="more-logos">
                 <h1>Partners</h1>
                 <h2>Our campaign was made possible with the help of these organisations</h2>
@@ -274,6 +279,9 @@
                 </li>
                 <li>
                   Georgetown - <a href="http://corepathways.georgetown.edu/three-professors-walk-into-a-bar-2/" target="_blank">Three Professors Walk into a Bar (Not!)</a>
+                </li>
+                <li>
+                  No Express Purpose - <a href="https://www.youtube.com/watch?v=K3dlE59jMwc" target="_blank">Episode 008 // 45 Days, 13 Hours, 1 Minute</a>
                 </li>
               </ul>
             </div>
